--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<description>Review SpringBoot Project</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
