--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
+
+default.email.sender=rgvastag@gmail.com
+default.email.receiver=rgvastag@gmail.com
