implementing new authorization methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=dev
 
 default.email.sender=rgvastag@gmail.com
 default.email.receiver=rgvastag@gmail.com
+
+jwt.secret=SequenciaDeAssinaturaDoToken
+jwt.expiration=60000
