--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,16 @@ default.email.sender=rgvastag@gmail.com
 default.email.receiver=rgvastag@gmail.com
 
 jwt.secret=SequenciaDeAssinaturaDoToken
-jwt.expiration=60000
+jwt.expiration=864000000
+
+## AWS S3 CONFIG
+aws.access_key_id={key}
+aws.secret_access_key={secret}
+aws.s3.bucket=vastag-rwsboot
+aws.s3.region=sa-east-1
+
+img.prefix.client.profile=cp
+img.profile.size=200
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
